@@ -20,20 +20,20 @@ import org.apache.kafka.clients.CommonClientConfigs;
 import org.apache.kafka.clients.admin.MockAdminClient;
 import org.apache.kafka.common.Node;
 import org.apache.kafka.connect.errors.ConnectException;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.MockedStatic;
 import org.mockito.internal.stubbing.answers.CallsRealMethods;
 
-import java.util.Arrays;
 import java.util.HashMap;
-import java.util.Map;
 import java.util.List;
+import java.util.Map;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.mockStatic;
 import static org.mockito.Mockito.times;
@@ -43,13 +43,13 @@ public class WorkerConfigTest {
     private static final String CLUSTER_ID = "cluster-id";
     private MockedStatic<WorkerConfig> workerConfigMockedStatic;
 
-    @Before
+    @BeforeEach
     public void setup() {
         workerConfigMockedStatic = mockStatic(WorkerConfig.class, new CallsRealMethods());
         workerConfigMockedStatic.when(() -> WorkerConfig.lookupKafkaClusterId(any(WorkerConfig.class))).thenReturn(CLUSTER_ID);
     }
 
-    @After
+    @AfterEach
     public void teardown() {
         workerConfigMockedStatic.close();
     }
@@ -58,7 +58,7 @@ public class WorkerConfigTest {
     public void testLookupKafkaClusterId() {
         final Node broker1 = new Node(0, "dummyHost-1", 1234);
         final Node broker2 = new Node(1, "dummyHost-2", 1234);
-        List<Node> cluster = Arrays.asList(broker1, broker2);
+        List<Node> cluster = List.of(broker1, broker2);
         MockAdminClient adminClient = new MockAdminClient.Builder().
                 brokers(cluster).build();
         assertEquals(MockAdminClient.DEFAULT_CLUSTER_ID, WorkerConfig.lookupKafkaClusterId(adminClient));
@@ -68,7 +68,7 @@ public class WorkerConfigTest {
     public void testLookupNullKafkaClusterId() {
         final Node broker1 = new Node(0, "dummyHost-1", 1234);
         final Node broker2 = new Node(1, "dummyHost-2", 1234);
-        List<Node> cluster = Arrays.asList(broker1, broker2);
+        List<Node> cluster = List.of(broker1, broker2);
         MockAdminClient adminClient = new MockAdminClient.Builder().
                 brokers(cluster).clusterId(null).build();
         assertNull(WorkerConfig.lookupKafkaClusterId(adminClient));
@@ -78,7 +78,7 @@ public class WorkerConfigTest {
     public void testLookupKafkaClusterIdTimeout() {
         final Node broker1 = new Node(0, "dummyHost-1", 1234);
         final Node broker2 = new Node(1, "dummyHost-2", 1234);
-        List<Node> cluster = Arrays.asList(broker1, broker2);
+        List<Node> cluster = List.of(broker1, broker2);
         MockAdminClient adminClient = new MockAdminClient.Builder().
                 brokers(cluster).build();
         adminClient.timeoutNextRequest(1);
